# epic

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  INSTALL.md  Jenkinsfile  README.md  commits  config.toml
src/:  pow.h  CMakeLists.txt  address_message.h  block.cpp  block.h  bundle.h  caterpillar.cpp  caterpillar.h  chain.cpp  chain.h  coin.cpp  coin.h  config.h  consensus.cpp  consensus.h  dag_manager.cpp  dag_manager.h  dag_manager.hpp  db_wrapper.cpp  db_wrapper.h  epic-cli.cpp  epic-cli.h  epic.cpp  getaddr_message.h  getblock_message.h  getdata_message.h  hash.h  init.cpp  init.h  inventory_message.h  levelset.hpp  main.cpp  mempool.cpp  mempool.h  merkle.cpp  merkle.h  message_type.h  milestone.h  milestone.hpp  miner.cpp  (+21 more)
src/cli/: cli.h  clilocalsession.h  colorprofile.h  history.h  inputdevice.h  inputhandler.h  linuxkeyboard.h  terminal.h
src/compat/: bitcoin_endian.h  byteswap.h  endian.h
src/consensus/: chain.cpp  chain.h  chains.h  coin.h  dag_manager.cpp  dag_manager.h  milestone.cpp  milestone.h  node.cpp  node.h  params.cpp  params.h  utxo.cpp  utxo.h  vertex.cpp  vertex.h
src/crypto/: aes.cpp  aes.h  blake2b.cpp  blake2b.h  common.h  extended_key.cpp  extended_key.h  hash.cpp  hash.h  key.cpp  key.h  keystore.cpp  keystore.h  pubkey.cpp  pubkey.h  sha256.cpp  sha256.h  sha_hash_verifier.h  sha_hash_writer.cpp  sha_hash_writer.h  sha_hasher.cpp  sha_hasher.h  siphash.cpp  siphash.h  siphashxN.cpp  siphashxN.h
src/crypto/ctaes/: ctaes.c
src/cuckaroo/: barrier.h  compress.h  cuckaroo.h
src/epicc/: main.cpp
src/hash/: blake2b.cpp  blake2b.h  common.h  hash.cpp  hash.h  sha256.cpp  sha256.h
src/interfaces/: dag_service.h
src/key/: base58.cpp  extended_key.cpp  extended_key.h  key.h  pubkey.cpp  pubkey.h
src/memory/: lockedpool.h
src/messages/: address_message.h  block.cpp  block.h  net_message.cpp  net_message.h  ping.h  pong.h  sync_messages.h  transaction.cpp  transaction.h  version_ack.h  version_message.h
src/miner/: mempool.h  miner.h
src/net/: address_manager.cpp  address_manager.h  address_message.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  getaddr_message.h  message_header.h  net_address.cpp  net_address.h  net_message.cpp  net_message.h  peer.cpp  peer.h  peer_manager.cpp  peer_manager.h  ping.h  pong.h  protocol_exception.h  version_ack.h  version_message.h
src/peer/: peer.cpp  peer.h  peer_manager.cpp  peer_manager.h  protocol_exception.h  task.h
src/pow/: mempool.cpp  mempool.h  miner.cpp  miner.h  solver.cpp  solver.h
src/pow/cuckaroo/: bitmap.h  compress.h  cuckaroo.cpp  cuckaroo.h  graph.h  mean.cpp  mean.h  siphash.h  siphashxN.h  trimmer.h
src/remote_solver/: epic_solver.cpp  solver_manager.cpp  solver_manager.h  solver_protocol.h  solver_task.h
src/rpc/: basic_rpc_server.cpp  basic_rpc_server.h  rpc_client.cpp  rpc_client.h  rpc_header.h  rpc_server.cpp  rpc_server.h  rpc_tools.cpp  rpc_tools.h  subscription.cpp  subscription.h
src/rpc/service/: basic_block_explorer.cpp  basic_block_explorer.h  command_line.cpp  command_line.h  return_code.cpp  return_code.h  rpc_service.h  service_solver.h  solver.h
src/script/: script.cpp  script.h
src/spdlog/: async.h  async_logger.h  formatter.h  logger.h  spdlog.h
src/storage/: block_store.cpp  block_store.h  db.cpp  db.h  db_wrapper.cpp  db_wrapper.h  obc.cpp  obc.h  rocksdb.cpp  rocksdb.h  storage.cpp  storage.h
src/support/: cleanse.cpp  cleanse.h  locked.h  lockedpool.cpp  lockedpool.h  secure.h  threadpool.cpp  threadpool.h  zeroafterfree.h
src/tasm/: functors.h  functors.hpp  opcodes.h  tasm.cpp  tasm.h  tasm.hpp
src/tools/: blockParser.cpp  epic_solver.cpp  main.cpp  mineGenesis.cpp  solver_manager.h  solver_protocol.h  solver_task.h  toml_specifacation.h  updateDiff.cpp
src/utils/: arith_uint256.cpp  arith_uint256.h  barrier.h  base58.cpp  base58.h  big_uint.cpp  big_uint.h  bip32.cpp  bip32.h  blocking_queue.cpp  blocking_queue.h  chains.h  circular_queue.h  concurrent_container.h  cpptoml.h  crc32.cpp  crc32.h  file_utils.cpp  file_utils.h  increment.h  max_queue.h  merkle.h  portable_endian.h  random.cpp  random.h  scheduler.h  serialization.h  serialize.h  stdint.h  stream.h  sync.cpp  sync.h  threadpool.cpp  threadpool.h  tinyformat.h  uint256.cpp  uint256.h  utilstrencodings.cpp  utilstrencodings.h
src/utils/cuckaroo/: bitmap.h  compress.h  graph.h  mean.h
src/utils/memory/: cleanse.cpp  (+4 more)
src/wallet/: crypter.cpp  crypter.h  hd_chain.cpp  hd_chain.h  key_chain.h  mnemonics.cpp  mnemonics.h  wallet.cpp  wallet.h  wallet_store.cpp  wallet_store.h  wordlist.cpp  wordlist.h
test/: CMakeLists.txt  main.cpp  test_params.cpp
test/consensus/: test_chain_verification.cpp  test_dfs.cpp  test_general_workflow.cpp  test_mempool.cpp  test_obc.cpp  test_params.cpp
test/core/: test_chain_verification.cpp  test_consensus.cpp  test_dfs.cpp  test_mempool.cpp  test_obc.cpp  test_params.cpp  test_synchronization.cpp  test_threadpool_solver.cpp  test_validation.cpp
test/crypto/: test_aes256.cpp  test_eckey.cpp  test_extkey.cpp  test_hash.cpp  test_sha256.cpp
test/demo/: test_demo.cpp
test/net/: test_address_manager.cpp  test_connection_manager.cpp  test_net_address.cpp  test_netaddress.cpp  test_netmessage.cpp  test_peer_manager.cpp
test/peer/: test_peer_manager.cpp  test_synchronization.cpp
test/pow/: test_miner.cpp  test_trimmer.cpp
test/rpc/: rpc_test.cpp  test_rpc.cpp  test_server_is_up.cpp
test/storage/: test_file_storage.cpp  test_rocksdb.cpp
test/support/: test_threadpool.cpp
test/tasm/: test_tasm.cpp
test/test-methods/: block-factory.cpp  block-factory.h  test_env.h  test_factory.cpp  test_factory.h  test_network.cpp  test_network.h
test/utils/: test_chains.cpp  test_concurrent_containers.cpp  test_crc32.cpp  test_file_storage.cpp  test_init.cpp  test_maxq.cpp  test_miner.cpp  test_rocksdb.cpp  test_ser.cpp  test_threadpool.cpp  test_threadpool_solver.cpp  test_trimmer.cpp  test_wallet.cpp
test/wallet/: test_wallet.cpp  test_wallet_encryption.cpp
(+41 files in other folders)
